# Brightify

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  README.md  alembic.ini  app.py  config.py  docker-compose.aws.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  logging_config.py  pyproject.toml  pytest.ini  requirements-app.txt  requirements.txt  seeds_artists.txt  skills-lock.json  va_baseline_v5d.json
.github/: copilot-instructions.md
SOICT_DATN_Application_VIE_Template/: Bia.tex  Bia_lot.tex  Danh_sach_tai_lieu_tham_khao.bib  DoAn.tex  Tu_viet_tat.tex
alembic/: env.py
api/: __init__.py  cache.py  music.py  rate_limit.py  recommend.py  serialization.py  system.py  utils.py
configs/: backtest_v0.yaml
core/: __init__.py  advanced_color_mapping.py  clap_emotion.py  color_va.py  emotion_analysis.py  explain.py  image_analysis.py  lyrics_router.py  mert_encoder.py  recommendation_engine.py  reranker.py  search_encoder.py  vn_context.py
data/: catalog_refilter_summary_20260608.md  va_ewe_weights.json
db/: __init__.py  engine.py  models.py  search.py  seed.py
docs/: API_REFERENCE.md  BACKTEST_REPORT.md  BASELINE_V32_METRICS.md  COLOR_FEATURE_SCIENTIFIC_AUDIT_V17.md  COLOR_FEATURE_SCIENTIFIC_BASIS_V39.md  COLOR_FINAL_AUDIT_V21.md  COLOR_FINAL_PLAN_V26.md  COLOR_FINAL_PLAN_V29.md  COLOR_FINAL_UPGRADE_PLAN_V24.md  COLOR_GOLDSET_PROTOCOL.md  COLOR_IMPROVEMENT_PLAN_V27.md  COLOR_NO_HUMAN_IMPROVEMENT_PLAN_V20.md  COLOR_SCIENTIFIC_REDESIGN_V25.md  DATABASE_SCHEMA.md  (+27 more)
(+474 files in other folders)
